app/assets/stylesheets/dropdowns.scss
.dropdown {
  @include display-flex;
  @include flex-grow(1);
  position: relative;
  vertical-align: top;
  overflow: hidden;
}

.dropdown-trigger {
  display: block;
  max-width: 100%;
}

.dropdown.is-active,
.dropdown.is-hoverable:hover {
  .dropdown-menu {
    display: block;
  }

  .dropdown-trigger {
    .button {
      border-bottom-left-radius: 0;
      border-bottom-right-radius: 0;
      border-bottom: none;
    }
  }
}

.dropdown.is-right .dropdown-menu {
  left: auto;
  right: 0;
}

.dropdown-menu {
  display: none;
  left: 1px;
  right: 1px;
  min-width: 12rem;
  position: absolute;
  top: 100%;
  z-index: 20;
}

.dropdown-content {
  background-color: white;
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
  padding: 0.75rem;
  overflow: auto;
  max-height: 305px;
}

.dropdown-item {
  color: #4a4a4a;
  display: block;
  font-size: 0.875rem;
  line-height: 1.5;
  position: relative;
  margin-top: 0.75rem;
}

button.dropdown-item {
  @include appearance(none);
  @include user-select(none);
  border: 1px solid transparent;
  -webkit-touch-callout: none;
  width: 100%;
  background-color: white;
  cursor: pointer;
  text-align: left;
  border-radius: 3px;

  &:hover,
  &:focus {
    background-color: $yellow;
  }
}

a.dropdown-item {
  padding-right: 3rem;
  white-space: nowrap;
}

a.dropdown-item:hover {
  background-color: whitesmoke;
  color: #0a0a0a;
}

a.dropdown-item.is-active {
  background-color: #00d1b2;
  color: $white;
}

.dropdown-divider {
  background-color: #dbdbdb;
  border: none;
  display: block;
  height: 1px;
  margin: 0.5rem 0;
}

